<resources>
    <string name="app_name">Imóveis</string>

    <plurals name="bedrooms">
        <item quantity="one">%d Dormitório</item>
        <item quantity="other">%d Dormitórios</item>
    </plurals>

    <plurals name="suites">
        <item quantity="one">%d Suíte</item>
        <item quantity="other">%d Suites</item>
    </plurals>

    <plurals name="garage_spaces">
        <item quantity="one">%d Vaga de garagem</item>
        <item quantity="other">%d Vagas de garagem</item>
    </plurals>

    <string name="empty_list_title">Ops!</string>
    <string name="empty_list">Não há nada para exibir.</string>

    <!-- DETAILS STRINGS -->
    <string name="building_area">%.2f m² de área construida</string>
    <string name="total_area">%.2f m² de área total</string>
    <string name="on_request">Sob consulta</string>
    <string name="updated_on">Atualizado em %s.</string>

    <!-- CONTACT STRINGS -->
    <string name="contact_title">Demonstrar interesse</string>
    <string name="contact_descriptiion">Envie seus dados para demonstrar interesse neste imóvel e em breve entraremos em contato com você.</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefone</string>
    <string name="send">Enviar dados</string>
    <string name="contact_error">Ocorreu um erro ao tentar enviar os seus dados.</string>
    <string name="contact_success">Dados enviados com sucesso.\n Aguarde, em breve entraremos em contado.</string>
</resources>
